<resources>
    <string name="app_name">Battleships</string>

    <string name="action_settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="join_game">Join Game</string>
    <string name="help">Help</string>
    <string name="credits">Credits</string>
    <string name="page_title">Page Title</string>
    <string name="page_body">Page Body</string>
    <string name="exit">Exit</string>
    <string name="score">Score</string>
    <string name="messages">User Messages</string>
    <string name="btn_back_text">Back</string>
    <string name="btn_redeploy_text">Redeploy</string>
    <string name="btn_set_ships_text">Set Ships</string>

    <string name="select_game">Select Game Type</string>

    <string name="title_activity_setup">SetupActivity</string>
    <string name="setup_instructions">Choose ship and then click on grid to position</string>
    <string name="button_rotate">Rotate</string>
    <string name="button_play_game">Begin Game</string>
    <string name="title_activity_play_computer">PlayComputerActivity</string>

    <string name="make_move">Select a cell to Fire on!</string>
</resources>
