<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/wallpaper"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo"
        />

    <Button
        android:id="@+id/newGame"
        style="@style/btnStyleMain"
        android:text="@string/new_game"
        />

    <Button
        android:id="@+id/joinGame"
        style="@style/btnStyleMain"
        android:text="@string/join_game"/>

    <Button
        android:id="@+id/help"
        style="@style/btnStyleMain"
        android:text="@string/help"/>

    <Button
        android:id="@+id/credits"
        style="@style/btnStyleMain"
        android:text="@string/credits"/>

    <Button
        android:id="@+id/exit"
        style="@style/btnStyleMain"
        android:text="@string/exit"/>

</LinearLayout>