<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black"
    tools:context="com.android.battleship.SetupActivity">

    <!-- Header -->

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/grid_blue"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

        <TextView
            android:id="@+id/headerTextView"
            style="@style/messages"
            android:text="@string/messages"
            />
    </LinearLayout>
    <!-- End Header -->

    <!-- Grid -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/radar"
        >

        <GridView
            android:id="@+id/setup_gridview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.8"
            android:background="@drawable/ocean"
            android:gravity="center"
            android:horizontalSpacing="1dp"
            android:numColumns="10"
            android:stretchMode="columnWidth">


        </GridView>

    </FrameLayout>
    <!-- End Grid -->

    <!-- Footer -->

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/grid_blue"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:src="@drawable/ic_btn_back"
                android:layout_gravity="bottom"/>

            <ImageButton
                android:id="@+id/btnRedeploy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:src="@drawable/ic_btn_redeploy"
                android:layout_gravity="bottom"
                />

            <ImageButton
                android:id="@+id/btnSetShips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:src="@drawable/ic_btn_ok"
                android:layout_gravity="bottom"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="3"
            android:weightSum="3">

            <TextView
                android:id="@+id/btnBackText"
                style="@style/btnLabel"
                android:text="@string/btn_back_text"
                />

            <TextView
                android:id="@+id/btnRedeployText"
                style="@style/btnLabel"
                android:text="@string/btn_redeploy_text"
                />

            <TextView
                android:id="@+id/btnSetShipsText"
                style="@style/btnLabel"
                android:text="@string/btn_set_ships_text"
                />
        </LinearLayout>

    </LinearLayout>
    <!-- End Footer -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:padding="@dimen/padding_medium"
            android:id="@+id/buttonRotate"
            android:text="@string/button_rotate"
            android:background="@drawable/shape"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:padding="@dimen/padding_medium"
            android:id="@+id/buttonPlayGame"
            android:text="@string/button_play_game"
            android:background="@drawable/shape"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            />


    </LinearLayout>



</LinearLayout>
